--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -15,6 +15,9 @@
             "path": "../engine-python"
         },
         {
+            "path": "../engine-template"
+        },
+        {
             "path": "../sarif"
         }
     ]
