--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,7 +13,7 @@
     },
     "scripts": {
         "build": "tsc",
-        "test": "node --test dist/**/*.test.js",
+        "test": "node --test dist",
         "clean": "rm -rf dist"
     },
     "dependencies": {
