fix: make examples compatible with test engines

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,4 +43,4 @@ jobs:
       - name: Integration test
         run: |
           cd packages/cli
-          node dist/cli.js --base-path ../../examples "*.json"
+          node dist/cli.js --base-path ../../examples "valid-environment.json"
